@@ -271,7 +271,8 @@ GNU Prolog 1.3.1 and later versions
 
 	Don't forget to use the change_directory/1 predicate to set the working 
 	directory before loading the library or an example. Supports smart 
-	compilation of source files. Full support for settings files.
+	compilation of source files. Full support for settings files. Multifile
+	predicates and grammar rules are not supported.
 
 
 IF/Prolog 5.3 and later versions
