@@ -11,7 +11,7 @@
 %
 %  configuration file for YAP Prolog 5.1.3 and later versions
 %
-%  last updated: December 20, 2009
+%  last updated: January 17, 2010
 %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
@@ -631,6 +631,16 @@ message_hook(clauses_not_together(_), _, _) :-	% YAP discontiguous predicate
 
 
 % '$lgt_rewrite_and_copy_pl_directive'(@callable, -callable)
+
+'$lgt_rewrite_and_copy_pl_directive'(initialization(Goal, When), initialization(CGoal, When)) :-
+	'$lgt_pp_entity'(_, Entity, Prefix, _, _),
+	'$lgt_comp_ctx'(Ctx, _, Entity, Entity, Entity, Prefix, [], _, ExCtx),
+	'$lgt_exec_ctx'(ExCtx, Entity, Entity, Entity, []),		% MetaVars = [] as we're compiling a local call
+	'$lgt_tr_body'(Goal, TGoal, DGoal, Ctx),
+	(	'$lgt_compiler_flag'(debug, on) ->
+		CGoal = DGoal
+	;	CGoal = TGoal
+	).
 
 '$lgt_rewrite_and_copy_pl_directive'(load_foreign_files(Files, Libs, InitRoutine), initialization(load_foreign_files(Files, Libs, InitRoutine))) :-
 	load_foreign_files(Files, Libs, InitRoutine).
